--- a/index.html
+++ b/index.html
@@ -71,19 +71,19 @@
                     <div id="group-info"></div>
                 </div>
                 <div class="detail-section">
-                    <h4>Direct Groups This Group Is A Member Of</h4>
+                    <h4>Direct parent groups</h4>
                     <div id="group-parent-groups"></div>
                 </div>
                 <div class="detail-section">
-                    <h4>Direct Groups Within This Group</h4>
+                    <h4>Direct child members</h4>
                     <div id="group-child-groups"></div>
                 </div>
                 <div class="detail-section">
-                    <h4>All Groups This Group Is A Member Of (Including Indirect)</h4>
+                    <h4>All parent groups (including indirect)</h4>
                     <div id="group-all-parent-groups"></div>
                 </div>
                 <div class="detail-section">
-                    <h4>All Groups Within This Group (Including Indirect)</h4>
+                    <h4>All child members (including indirect)</h4>
                     <div id="group-all-child-groups"></div>
                 </div>
             </div>
